--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "matrixgl": "^1.0.1",
     "three": "^0.101.1",
+    "three-effectcomposer-es6": "0.0.4",
     "three-gltf2-loader": "^1.2.0"
   },
   "devDependencies": {
