--- a/package.json
+++ b/package.json
@@ -10,15 +10,27 @@
   "license": "ISC",
   "dependencies": {
     "matrixgl": "^1.0.1",
-    "three": "^0.101.1",
+    "three": "^0.100.0",
     "three-effectcomposer-es6": "0.0.4",
     "three-gltf2-loader": "^1.2.0"
   },
   "devDependencies": {
-    "shader-loader": "^1.3.1",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.25.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/register": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "browser-sync": "^2.26.3",
+    "del": "^3.0.0",
+    "glsl-shader-loader": "^0.1.6",
+    "gulp": "^4.0.0",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-sass": "^4.0.2",
+    "minimist": "^1.2.0",
+    "webpack": "^4.28.4",
+    "webpack-stream": "^5.2.1"
   }
 }
