--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "@babel/register": "^7.0.0",
     "babel-loader": "^8.0.5",
     "browser-sync": "^2.26.3",
+    "clang-format": "^1.2.4",
     "del": "^3.0.0",
-    "glsl-shader-loader": "^0.1.6",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-cssmin": "^0.2.0",
     "gulp-plumber": "^1.2.1",
     "gulp-sass": "^4.0.2",
     "minimist": "^1.2.0",
+    "shader-loader": "^1.3.1",
     "webpack": "^4.28.4",
     "webpack-stream": "^5.2.1"
   }
