--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-autoprefixer": "^5.0.0",
     "gulp-cssmin": "^0.2.0",
     "gulp-plumber": "^1.2.1",
+    "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.0.2",
     "minimist": "^1.2.0",
     "shader-loader": "^1.3.1",
